# twilight-audio

./: Cargo.toml  README.md
src/: client.rs  gateway.rs  lib.rs  manager.rs  voice.rs
twilight-voice/: Cargo.toml
twilight-voice-model/: Cargo.toml  LICENSE  LICENSE.md
twilight-voice-model/benches/: de.rs
twilight-voice-model/src/: close_code.rs  lib.rs  payload.rs
twilight-voice-model/src/event/: from.rs  mod.rs  tests.rs
twilight-voice/src/: client.rs  gateway.rs  lib.rs  voice.rs
