[package]
name = "twilight-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto_secretbox = "0.1.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-websockets = "0.9.0"
twilight-model = "0.15.4"

[features]
default = [ "rustls" ]
rustls = [ "tokio-websockets/rustls-webpki-roots" ]