[package]
name = "twilight-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto_secretbox = "0.1.1"
futures-util = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serenity-voice-model = "0.2.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1" }
twilight-model = "0.15.4"

[features]
default = [ "rustls" ]
rustls = [ "tokio-tungstenite/rustls-tls-webpki-roots" ]
