[package]
name = "twilight-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
crypto_secretbox = "0.1.1"
discortp = { version = "0.6.0", features = ["discord-full"] }
futures-util = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
twilight-voice-model.path = "../twilight-voice-model"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
twilight-model.workspace = true

[features]
default = [ "rustls" ]
rustls = [ "tokio-tungstenite/rustls-tls-webpki-roots" ]

[dev-dependencies]
anyhow = "1.0.86"
twilight-gateway = "0.15.4"
